build & deploy scripts added to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "MyCampus",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "webpack --config webpack.conf.js",
+    "deploy": "npm run build && gh-pages -d build",
   },
 
   "author": "Youssef DOUBLI",
