package.json fixed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "webpack --config webpack.conf.js",
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "npm run build && gh-pages -d build"
   },
 
   "author": "Youssef DOUBLI",
