Update azure-pipelines.yml for Azure Pipelines
packages install script added

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    npm install request
+    npm install express
+    npm install body-parser
+    npm install pg
     npm install
-    npm install request --save
-    npm install express --save
-    npm install body-parser --save
-    npm install pg --save
   displayName: 'npm install and build'
