--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.13.4",
     "request": "^2.72.0",
     "pg": "^7.8.0",
-    "nodemailer": "latest"
+    "nodemailer": "latest",
+    "uuid": "latest"
   },
   "engines": {
     "node": "11.9.0"
