change package. email-validator ==> email-existence test 3 : correct address VS <rong address

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pg": "^7.8.0",
     "nodemailer": "latest",
     "uuid": "latest",
-    "email-validator" : "latest"
+    "email-existence" : "latest"
   },
   "engines": {
     "node": "latest"
