Uninstall email-existence. log(email) added

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "request": "^2.72.0",
     "pg": "^7.8.0",
     "nodemailer": "latest",
-    "uuid": "latest",
-    "email-existence" : "latest"
+    "uuid": "latest"
   },
   "engines": {
     "node": "latest"
