--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "request": "^2.72.0",
     "pg": "^7.8.0",
     "nodemailer": "latest",
-    "uuid": "latest"
+    "uuid": "latest",
+    "cheerio": "latest"
   },
   "engines": {
     "node": "latest"
