--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "start": "node app.js",
     "build": "npm build ."
   },
-
   "author": "Youssef DOUBLI",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cheerio": "latest",
+    "dotenv": "^7.0.0",
     "express": "^4.13.4",
-    "request": "^2.72.0",
-    "pg": "^7.8.0",
     "nodemailer": "latest",
-    "uuid": "latest",
-    "cheerio": "latest"
+    "pg": "^7.8.0",
+    "request": "^2.72.0",
+    "uuid": "latest"
   },
   "engines": {
     "node": "latest"
