--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "latest",
     "pg": "^7.8.0",
     "request": "^2.72.0",
-    "uuid": "latest"
+    "uuid": "latest",
+    "zlib": "^1.0.5"
   },
   "engines": {
     "node": "latest"
