--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "latest",
     "dotenv": "^7.0.0",
     "express": "^4.13.4",
+    "ical": "^0.6.0",
     "nodemailer": "latest",
     "pg": "^7.8.0",
     "request": "^2.72.0",
